<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ActiviteOuverture"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">

    <TextView android:id="@+id/TV1"
        android:text="@string/TVb1" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="26sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bb1"
        android:id="@+id/Bb1"
        android:gravity="center_vertical|center_horizontal" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <ImageView
        android:id="@+id/IVseparateur"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/Sseparateur"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_textfield"
        android:paddingLeft="10sp"
        android:paddingRight="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TVb2"
        android:id="@+id/TV2"
        android:textSize="26sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bb2"
        android:id="@+id/Bspectater" />

</LinearLayout>
